<resources>
    <string name="app_name">Magic App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Benvenuto</string>
    <string name="nav_header_subtitle">Quanti giocatori siete?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tokens">Tokens</string>
    <string name="leftarrow"><![CDATA[<]]></string>
    <string name="notokenerror">There are no tokens to delete</string>
    <string name="title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_first">menu_first</string>
    <string name="menu_second">menu_second</string>
    <string name="menu_1player">1 player</string>
    <string name="menu_2player">2 player</string>
    <string name="menu_3player">3 player</string>
    <string name="menu_4player">4 player</string>
    <string name="menu_token">Token</string>
    <string name="menu_preset">Preset</string>
</resources>